--- a/refs_photon_stats.bib
+++ b/refs_photon_stats.bib
@@ -13,6 +13,18 @@ url = {https://opg.optica.org/josaa/abstract.cfm?URI=josaa-6-1-80},
 doi = {10.1364/JOSAA.6.000080},
 }
 
+@article{ferreira2020,
+  title={Connecting field and intensity correlations: The Siegert relation and how to test it},
+  author={Ferreira, D. and Bachelard, R. and Guerin, W. and Kaiser, R. and Fouché, M.},
+  journal={American Journal of Physics},
+  volume={88},
+  number={10},
+  pages={831--837},
+  year={2020},
+  publisher={American Association of Physics Teachers}
+}
+
+
 
 @book{Goodman2007,
   title={Speckle Phenomena in Optics: Theory and Applications},
